--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "repository": {
@@ -23,7 +24,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.0.2",
-    "mongoose": "^5.11.18"
+    "mongoose": "^5.11.15",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
